--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "mermaid": "^11.12.2",
+    "pdfjs-dist": "^5.4.530",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^10.3.0",
+    "react-syntax-highlighter": "^16.1.0",
     "rehype-katex": "^7.0.1",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0"
   },
