--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # Copy this file to .env and add your Gemini API key
-GEMINI_API_KEY=...
+#GEMINI_API_KEY=AIzaSyDyjcPzwed9lNnIpAJKqTTKB-HVpZlp85Y
+GEMINI_API_KEY=AIzaSyAg_wu0rpeCOt5YKoX9HtFD5amUl16fjI4
