--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.18.0",
     "@google/genai": "^1.34.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "mermaid": "^11.12.2",
     "pdfjs-dist": "^5.4.530",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-drawio": "^1.0.7",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.3.0",
     "react-syntax-highlighter": "^16.1.0",
